# POET

./: .gitignore  .gitlab-ci.yml  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  struct_init.org
R_lib/: ai_surrogate_model_functions.R  kin_r_library.R
app/: poet.cpp
bench/: CMakeLists.txt
bench/DAOSBenchmark/: CMakeLists.txt
bench/barite/: barite_50ai_surr_mdl.R
bench/dolo/: CMakeLists.txt  dolo_adv.R  dolo_diffu_inner.R  dolo_diffu_inner_large.R  dolo_interp_long.R
include/poet/: ChemistryModule.hpp  DHT.h  DHT_Wrapper.hpp  DaosKeyValue.h  Rounding.hpp  SimParams.hpp
share/poet/bench/daos/: dolo_diffu_edge.R
src/: CMakeLists.txt  SimParams.cpp  poet.cpp  poet.hpp  poet.hpp.in
src/Base/: Macros.hpp
src/Chemistry/: ChemistryModule.cpp  ChemistryModule.hpp  MasterFunctions.cpp  WorkerFunctions.cpp
src/Chemistry/SurrogateModels/: AI_functions.cpp  AI_functions.hpp  DHT_Wrapper.cpp  DHT_Wrapper.hpp  HashFunctions.cpp  HashFunctions.hpp  Interpolation.hpp  InterpolationModule.cpp  ProximityHashTable.cpp  serializer.cpp  serializer.hpp
src/Chemistry/SurrogateModels/AI_Python_functions/: keras_AI_surrogate.py
src/ChemistryModule/: CMakeLists.txt  ChemistryModule.cpp  DHT_Wrapper.cpp  DaosKeyValue.c  MasterFunctions.cpp  WorkerFunctions.cpp
src/ChemistryModule/DAOS/: DHT_Wrapper.cpp
src/ChemistryModule/DAOS/KV/: DaosKeyValue.c
src/ChemistryModule/DAOS/OB/: DaosKeyValue.c
src/ChemistryModule/SurrogateModels/: DHT.c  DHT_Wrapper.cpp
src/DataStructures/: Field.hpp  PinnableMemory.hpp
src/IO/: StatsIO.cpp  StatsIO.hpp
src/Init/: ChemistryInit.cpp  DiffusionInit.cpp  GridInit.cpp  InitialList.cpp  InitialList.hpp
src/Transport/: AdvectionModule.cpp  AdvectionModule.hpp  DiffusionModule.cpp  DiffusionModule.hpp
test/: CMakeLists.txt  RInsidePOET_funcs.R  testAdvection.cpp  testDataStructures.hpp.in  testField.cpp  testInputFiles.hpp.in  testNamedVector.cpp  testPinnableMemory.cpp
test/advection/: dolo_adv.R  testAdvection.cpp
util/: Advection2D.R
